product-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-service
spec:
  selector:
    app: product-service
  type: ClusterIP
  ports:
    - name: product-service
      protocol: TCP
      port: 80
      targetPort: 3002
