product-service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: product-service
  labels:
    name: product-service
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/client-max-body-size: 200m
    nginx.ingress.kubernetes.io/proxy-body-size: 200m
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/limit-rps: "100"

spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - game-store.trituong.space
    secretName: product-service-tls
  rules:
  - host: game-store.trituong.space
    http:
      paths:
      - path: "/product/(.*)"
        pathType: Prefix
        backend:
          service:
            name: product-service
            port:
              number: 80
